# mBMFF

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.github/workflows/: ci.yml  release.yml
include/mbmff/: av1.hpp  common.hpp  mbmff.hpp
include/mbmff/av1/: av1_enums.hpp  av1_funcs.hpp  av1_structs.hpp
include/mbmff/boxes/: alis.hpp  apcn.hpp  av1C.hpp  avc1.hpp  avc3.hpp  avcC.hpp  box_view.hpp  btrt.hpp  cdsc.hpp  co64.hpp  colr.hpp  common.hpp  containers.hpp  ctts.hpp  dimg.hpp  dref.hpp  elst.hpp  esds.hpp  fiel.hpp  free.hpp  frma.hpp  ftyp.hpp  gmin.hpp  hdlr.hpp  hev1.hpp  hvcC.hpp  iinf.hpp  iloc.hpp  infe.hpp  ipma.hpp  iref.hpp  irot.hpp  ispe.hpp  load.hpp  mdat.hpp  mdhd.hpp  meta.hpp  mp4a.hpp  mp4v.hpp  mvhd.hpp  (+21 more)
test/: CMakeLists.txt  entry_main.cpp  formatters.hpp  page_test.cpp  recursive_iterator_tests.cpp  string_tests.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tools/: amalgamate.py
